# git-cli-helper

./: Cargo.toml  LICENCE  README.md  commit_message.txt
.github/workflows/: build.yml
src/: git_related.rs  main.rs  my_theme.rs  utils.rs
