[package]
name = "git-commands"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
regex = "1"
dialoguer = "0.11.0"
console = "0.15.5"
clap = { version = "4.4.7", features = ["derive"] }
