[package]
authors = ["Tom Planche <github.com/tomplanche>"]
description = "A simple CLI tool to help you with your git commands."
documentation = "https://github.com/TomPlanche/git-cli-helper?tab=readme-ov-file#git-commands-with-rust"
edition = "2021"
keywords = ["cli", "git", "helper", "commands"]
license = "MIT"
license-file = "LICENSE"
name = "git-commands"
readme = "README.md"
repository = "https://github.com/TomPlanche/git-cli-helper"
version = "1.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
regex = "1"
dialoguer = "0.11.0"
console = "0.15.5"
clap = { version = "4.4.7", features = ["derive"] }
